--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "drizzle-orm": "^0.45.1",
     "expo": "~54.0.33",
+    "expo-asset": "~12.0.12",
+    "expo-file-system": "~19.0.21",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5"
