--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "drizzle-orm": "^0.45.1",
     "expo": "~54.0.33",
     "expo-asset": "~12.0.12",
@@ -17,7 +18,8 @@
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-bluetooth-classic": "^1.73.0-rc.17"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
